# n8n-ai-automations-apps

./: .gitignore  README.md  pyproject.toml
workflows/: docker-compose.yml
